# Zayavlenie-v-dormitory-Backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_02_27_0053-8715a60a0fdb_initial.py
src/: config.py  main.py
src/entities/: declaration.py
src/enums/: permission.py  role.py
src/models/: declaration.py
src/repositories/: declaration.py
src/routers/: __init__.py  health.py
src/routers/admin/: __init__.py  declaration.py
src/routers/base/: __init__.py  declaration.py
src/schemas/: create_declaration.py  declaration.py  declarations.py  get_current_user_response.py  verify_token_response.py
src/services/: auth.py  declaration.py
src/utils/: database.py  dependencies.py
