[project]
name = "zayavlenie-v-dormitory-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.133.0",
    "pydantic-settings>=2.13.1",
    "sesc-auth-sdk>=0.1.0",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]

[tool.uv.workspace]
members = ["packages/other-package"]

[tool.uv.sources]
sesc-auth-sdk = { git = "https://github.com/SESC-IT-Team/Lyceum-Auth-SDK.git" }
